syntax = "proto3";
package tss.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "google/api/annotations.proto";
import "tss/v1beta1/tss.proto";

option go_package = "github.com/bandprotocol/chain/v2/x/tss/types";

// Query defines the gRPC querier service.
service Query {
  // Counts queries the number of existing groups and signing.
  rpc Counts(QueryCountsRequest) returns (QueryCountsResponse) {
    option (google.api.http).get = "/tss/v1beta1/counts";
  }

  // Group queries group details
  rpc Group(QueryGroupRequest) returns (QueryGroupResponse) {
    option (google.api.http).get = "/tss/v1beta1/groups/{group_id}";
  }

  // Members queries all members in this group.
  rpc Members(QueryMembersRequest) returns (QueryMembersResponse) {
    option (google.api.http).get = "/tss/v1beta1/groups/{group_id}/members";
  }

  // IsGrantee queries grant of account on this granter.
  rpc IsGrantee(QueryIsGranteeRequest) returns (QueryIsGranteeResponse) {
    option (google.api.http).get = "/tss/v1beta1/is_grantee/{granter}/{grantee}";
  }

  // DE queries all de for this address.
  rpc DE(QueryDERequest) returns (QueryDEResponse) {
    option (google.api.http).get = "/tss/v1beta1/de_list/{address}";
  }

  // PendingGroups queries all pending groups for this address.
  rpc PendingGroups(QueryPendingGroupsRequest) returns (QueryPendingGroupsResponse) {
    option (google.api.http).get = "/tss/v1beta1/pending_groups/{address}";
  }

  // PendingSignings queries all pending signs for this address.
  rpc PendingSignings(QueryPendingSigningsRequest) returns (QueryPendingSigningsResponse) {
    option (google.api.http).get = "/tss/v1beta1/pending_signings/{address}";
  }

  // Signing queries signing details.
  rpc Signing(QuerySigningRequest) returns (QuerySigningResponse) {
    option (google.api.http).get = "/tss/v1beta1/signings/{signing_id}";
  }

  // Replacements queries all replacements.
  rpc Replacements(QueryReplacementsRequest) returns (QueryReplacementsResponse) {
    option (google.api.http).get = "/tss/v1beta1/replacements";
  }

  // Replacement queries replacement by ID.
  rpc Replacement(QueryReplacementRequest) returns (QueryReplacementResponse) {
    option (google.api.http).get = "/tss/v1beta1/replacements/{id}";
  }
}

// QueryCountsRequest is request type for the Query/Count RPC method.
message QueryCountsRequest {}

// QueryCountsResponse is response type for the Query/Count RPC method.
message QueryCountsResponse {
  // group_count is total number of group available on the chain
  uint64 group_count = 1;
  // signing_count is total number of signing request submitted to the chain
  uint64 signing_count = 2;
  // ReplacementCount is total number of replacement groups submitted to the chain
  uint64 replacement_count = 3;
}

// QueryGroupRequest is the request type for the Query/Group RPC method
message QueryGroupRequest {
  // group_id defines the unique id of the group.
  uint64 group_id = 1;
}

// QueryGroupResponse is the response type for the Query/Group RPC method
message QueryGroupResponse {
  // group defines the group object containing group information.
  Group group = 1 [(gogoproto.nullable) = false];
  // dkg_context defines the DKG context data.
  bytes dkg_context = 2 [
    (gogoproto.customname) = "DKGContext",
    (gogoproto.casttype)   = "github.com/cometbft/cometbft/libs/bytes.HexBytes"
  ];
  // members is the list of members in the group.
  repeated Member members = 3 [(gogoproto.nullable) = false];
  // round1_infos is the list of Round 1 information.
  repeated Round1Info round1_infos = 4 [(gogoproto.nullable) = false];
  // round2_infos is the list of Round 2 information.
  repeated Round2Info round2_infos = 5 [(gogoproto.nullable) = false];
  // complaints_with_status is the list of complaints with status.
  repeated ComplaintsWithStatus complaints_with_status = 6 [(gogoproto.nullable) = false];
  // confirms is the list of confirms.
  repeated Confirm confirms = 7 [(gogoproto.nullable) = false];
}

// QueryMembersRequest is the request type for the Query/Members RPC method
message QueryMembersRequest {
  // group_id defines the unique id of the group.
  uint64 group_id = 1;
}

// QueryMembersResponse is the response type for the Query/Members RPC method
message QueryMembersResponse {
  // members are member list of the group
  repeated Member members = 1 [(gogoproto.nullable) = false];
}

// QueryIsSignerRequest is request type for the Query/IsGrantee RPC method.
message QueryIsGranteeRequest {
  // granter is a granter address
  string granter = 1;
  // grantee is a grantee address
  string grantee = 2;
}

// QueryIsGranteeResponse is response type for the Query/IsGrantee RPC method.
message QueryIsGranteeResponse {
  // is_grantee is true if this account has been granted by granter
  bool is_grantee = 1;
}

// QueryDERequest is the request type for the Query/DE RPC method.
message QueryDERequest {
  // address is the address for the request.
  string address = 1;
  // pagination defines pagination settings for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryDEResponse is the response type for the Query/DE RPC method.
message QueryDEResponse {
  // des is a list of DEs.
  repeated DE des = 1 [(gogoproto.customname) = "DEs", (gogoproto.nullable) = false];
  // pagination defines an pagination for the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryPendingGroupsRequest is the request type for the Query/PendingGroups RPC method.
message QueryPendingGroupsRequest {
  // address is the address for the request.
  string address = 1;
}

// QueryPendingGroupsResponse is the response type for the Query/PendingGroups RPC method.
message QueryPendingGroupsResponse {
  // pending_groups is a list of pending groups.
  repeated uint64 pending_groups = 1;
}

// QueryPendingSigningsRequest is the request type for the Query/PendingSignings RPC method.
message QueryPendingSigningsRequest {
  // address is the address for the request.
  string address = 1;
}

// QueryPendingSigningsResponse is the response type for the Query/PendingSignings RPC method.
message QueryPendingSigningsResponse {
  // pending_signings is a list of pending signings.
  repeated uint64 pending_signings = 1;
}

// QuerySigningRequest is the request type for the Query/Signing RPC method.
message QuerySigningRequest {
  // signing_id is the ID of the signing request.
  uint64 signing_id = 1;
}

// QuerySigningResponse is the response type for the Query/Signing RPC method.
message QuerySigningResponse {
  // signing_result is the result of the signing.
  SigningResult signing_result = 1 [(gogoproto.nullable) = false];
}

// QueryReplacementsRequest is the request type for the Query/Replacements RPC method.
message QueryReplacementsRequest {
  // status is an enumeration of the possible statuses of a group replacement process.
  ReplacementStatus status = 1;
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryReplacementsResponse is the response type for the Query/Replacements RPC method.
message QueryReplacementsResponse {
  // replacements is a list of replacements.
  repeated Replacement replacements = 1;
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryReplacementRequest is the request type for the Query/Replacement RPC method.
message QueryReplacementRequest {
  // id is the unique identifier of the replacement.
  uint64 id = 1;
}

// QueryReplacementResponse is the response type for the Query/Replacement RPC method.
message QueryReplacementResponse {
  // replacement represents a group that will replaced with another group in the replacement process.
  Replacement replacement = 1;
}
